# trady

./: Cargo.toml  config.toml  fix_files.py  pack_to_json.py  project.json
src/: config.rs  lib.rs  main.rs
src/common/: constants.rs  enums.rs  mod.rs  shutdown.rs  types.rs  utils.rs
src/common/utils/: shutdown.rs
src/domain/: events.rs  interfaces.rs  mod.rs  models.rs
src/domain/strategies/: arbitrage.rs  base.rs  mean_reversion.rs  mod.rs
src/infra/: mod.rs
src/infra/adapters/: coinbase.rs  exchange.rs  kraken.rs  mod.rs
src/infra/broker_adapters/: base.rs  interactive_broker_adapter.rs  mod.rs
src/infra/event_bus/: zmq.rs
src/infra/execution/: manager.rs
src/ui/: audit.rs  console.rs  logger.rs  metrics.rs  mod.rs
