[package]
name = "trading_platform"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
zmq = "0.10"
config = "0.13"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
async-trait = "0.1.77"
anyhow = "1.0"
uuid = { version = "1.6.1", features = ["v4"] }
futures = "0.3"
tokio-websockets = "0.1"
regex = "1.10"
EOF"